--- a/gb/20/2/7/n11851250.md
+++ b/gb/20/2/7/n11851250.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/kmtpx253/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kmtpx253/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>“另一境界的舞蹈技巧”名舞蹈家受神韵启发</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oqudue369/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>“另一境界的舞蹈技巧”舞蹈家受神韵启发</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2002062323302124-600x400.jpg" />
 <h6>2020年2月6日，Rodrigo Jimenez和Wendy Jimenez观看了神韵在夏洛特的演出。（新唐人电视台）
 </h6>
 <hr>
-	<p>【大纪元2020年02月07日讯】（大纪元美国夏洛特记者站报导）“可以感受到这是另一种境界的<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>技巧。”舞蹈家Rodrigo Jimenez观看了<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>的演出后由衷地赞叹道。</p>
-<p>2月6日晚，<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>北美艺术团在美国<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E5%A4%8F%E6%B4%9B%E7%89%B9%E8%B4%9D%E5%B0%94%E5%85%8B%E5%89%A7%E9%99%A2.md">夏洛特贝尔克剧院</a>（Belk Theater at Blumenthal Performing Arts Center）进行了首场演出。著名表演艺术家、指导教师Rodrigo Jimenez和太太Wendy Jimenez观看了演出，感到神韵演出带给他们很多的启发。</p>
-<p>Rodrigo Jimenez和Wendy Jimenez曾在国内外举办过无数次演出。他们曾受过世界级大师的全面训练，是ESPN世界萨尔萨（Salsa）舞和阿根廷探戈的冠军得主，并担任一些本地和国际公共广播电视节目的主要阵容，在许多国家和国际主要城市的萨尔萨盛会上举办过讲习班。他们目前拥有自己的<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>学校，专门传授拉丁舞。</p>
+	<p>【大纪元2020年02月07日讯】（大纪元美国夏洛特记者站报导）“可以感受到这是另一种境界的<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>技巧。”舞蹈家Rodrigo Jimenez观看了<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的演出后由衷地赞叹道。</p>
+<p>2月6日晚，<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>北美艺术团在美国<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%A4%8F%E6%B4%9B%E7%89%B9%E8%B4%9D%E5%B0%94%E5%85%8B%E5%89%A7%E9%99%A2.md#1">夏洛特贝尔克剧院</a>（Belk Theater at Blumenthal Performing Arts Center）进行了首场演出。Rodrigo Jimenez和太太Wendy Jimenez观看了演出，感到神韵演出带给他们很多的启发。</p>
+<p>Rodrigo Jimenez和Wendy Jimenez曾在国内外举办过无数次演出。他们曾受过世界级大师和ESPN世界萨尔萨（Salsa）舞和阿根廷探戈冠军得主的系统全面的训练，并担任一些本地和国际公共广播电视节目的主要阵容，在许多国家和国际主要城市的萨尔萨盛会上举办过讲习班。他们目前拥有自己的<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>学校，专门传授拉丁舞。</p>
 <p>Wendy说，“真是个华美壮丽的演出，我非常喜爱他们借此分享他们的文化传承。他们的服饰与舞蹈动作都如此优美，还有现场演奏的音乐，真是美不胜收，这是一场美丽多彩的演出。”</p>
 <p>Jimenez说，“我真的很感谢他们的付出，因为我们知道要能展现出这么多不同的舞蹈需要下极大的功夫，对演员们的要求极高。我们很能体会并很感谢。我们热衷于舞蹈也非常喜欢古典文化的舞蹈，我们很幸运今晚能来看这场演出。”</p>
-<p>神韵以复兴传统文化为自己的使命，并将中国“神传文化”的精髓演绎在舞台上，Jimenez从中感受到神性的内涵，“特别是他们采用的<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md">天幕</a>的特殊效果。将舞蹈演员与多媒体背景融合在一起，真的是巧妙又富创意，营造出文化的精髓与精神。”</p>
+<p>神韵以复兴传统文化为自己的使命，并将中国“神传文化”的精髓演绎在舞台上，Jimenez从中感受到神性的内涵，“特别是他们采用的<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>的特殊效果。将舞蹈演员与多媒体背景融合在一起，真的是巧妙又富创意，营造出文化的精髓与精神。”</p>
 <p>“我也极有同感。”Wendy认同地说。</p>
 <p>创世的节目让Jimenez很有感触，他说，“的确，人类的共同信仰是我们有一位创世的主，我们都是他的子女。我们非常感谢他们对此的呈现，也确实感到与这信念融为一体。”</p>
 <p>Wendy说，“我觉得能把这些内容带给观众真的很好，把这些信息传递给所有在场观看的人。所以我觉得演出看起来让人倾倒。”</p>
@@ -26,38 +26,40 @@
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/7/n11851250.htm">“另一境界的舞蹈技巧”名舞蹈家受神韵启发</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/12/16/n11725803.htm">热能量子跳跃：研究展示真空导热</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/5/13/n11254871.htm">太空微重力环境下 真空“吸火”新法取代传统灭火器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/19/n10231780.htm">研究：人体几乎是真空 微观间隙极其巨大</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/8/22/n9553513.htm">日本向中国游轮旅客免费发放真空米饭</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/15/n8202777.htm">不用真空包装机 也能以真空包装储存食物</a></li>
-> <li><a href="https://www.epochtimes.com/gb/15/10/16/n4552019.htm">真空非无物 清大证实有扰动及结构</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】疫情致3省65市封城 病毒攻入北京大院</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849864.htm">李文亮去世点燃空前愤怒 中共急令降温</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11847887.htm">【翻墙必看】郭文贵曝武汉肺炎骇人内情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849459.htm">【快讯】武汉疫情“吹哨人”李文亮去世</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/9/n11778587.htm">【命理】看命中财星和中年创业大富之命</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11832874.htm">武昌起义——中国由帝制走向共和的终局之战</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11829363.htm">祛瘟疫良方 邪不侵正孝可感天 史上有明证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846240.htm">郭文贵曝武汉肺炎死亡人数 中共欲嫁祸美国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11847016.htm">【新闻看点】川普国情咨文说啥 习隐身终露面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/4/n11844943.htm">中国富豪举报：武汉病毒所是新冠病毒祸源</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11845382.htm">【拍案惊奇】防疫昏招面面观 病毒泄漏论成真？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849749.htm">【热点互动】武汉新冠病毒的来源到底是什么？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11847306.htm">【思想领袖】专访班农：华为如何威胁西方国家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846974.htm">给武汉人捐赠首批制氧机 袁立自曝一直被禁言</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/4/n11844529.htm">林郑限官员戴口罩惹议 黄秋生：如下染病令</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11845464.htm">这只松鼠用这招赶走响尾蛇 网民：值得学习</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849344.htm">吴宗宪捐总值3千万吸尘器 助武汉疫区医院</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11848061.htm">美国老牌影星寇克道格拉斯辞世 享嵩寿103岁</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/2/3/n11840349.md#1">神韵美不胜收 商业撰稿人要向朋友推荐</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/2/3/n11840382.md#1">神韵艺术造诣卓越 金融公司总监陶醉其中</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/2/3/n11840682.md#1">神韵精彩绝伦 麻醉医生体验神传文化之深奥</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/2/3/n11841009.md#1">神韵故事启迪人心 室内设计师获“重生”</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/2/3/n11841078.md#1">神韵舞蹈美丽超凡 经理夫妇为之陶醉</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/2/3/n11841188.md#1">神韵奥斯汀四场全爆满 观众心灵重生</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kmtpx253/djy/blob/master/gb/20/2/7/n11851250.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/22/n9759413.md#1" target="_blank">陆雯：1964年的一桩惨案</a></li><li><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240778.md#1">日籍女生染疫 台湾采检213人抗体 结果出炉</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12231462.md#1">【独家】习近平怯步军营的背后</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12238373.md#1">【一线采访】贵州高考大巴坠水至少21死</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236320.md#1">60岁杨贵媚晕眩发作 坐轮椅就医检查</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237412.md#1">收6岁女儿送玫瑰花茶 孙俪直呼舍不得喝</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239433.md#1">复出不顺转当网红？范冰冰抖音昵称引热议</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236838.md#1">浙江卫视高管爆巨额受贿 周冬雨受牵连挨轰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237074.md#1">41岁男星染疫遭截肢 治疗数月仍不敌病魔</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237076.md#1">强制五个孩子戒“网瘾” 结果震惊妈妈</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">【康熙大帝】远赴朔漠 三征葛尔丹</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236101.md#1">纵横破解：预言与人生（下）</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12230158.md#1">绘画中的瘟疫——罪与罚的故事（一）</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240967.md#1">溺水时灵魂出窍 小女孩看见自己的身体</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqudue369/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqudue369/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/7/n11851250.htm">“另一境界的舞蹈技巧”舞蹈家受神韵启发</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oqudue369/djy/blob/master/gb/20/2/7/n11851250.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
